# nixos-clangd-failure

./: CMakeLists.txt  README.md  check_diagnostics.sh  flake.nix
.zed/: settings.json
